2020-01-09  Charlie Zender  <zender@sastrugi>

	* Adjust area reported to calling code by small-circle area correction

2020-01-04  Charlie Zender  <zender@uci.edu>

	* Add lz4.cdl to test CCR LZ4 filter

2020-01-02  Charlie Zender  <zender@uci.edu>

	* Update copyright year

2019-12-20  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.2-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.2-alpha01: Hatha';git push
	git tag -a 4.9.2-alpha01 -m 'Functionally identical to 4.9.1';git push --tags

2019-12-19  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.1 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.1: Skyglow';git push
	git tag -a 4.9.1 -m 'autoconf EXTERNL netcdf_mem.h;automake libnco.la;ncclimo --glb_avg;ncpdq flt_dbl;ncremap vrt_ntp fix, nco_con dfl;nco_copy_att() _NCProperties;';git push --tags

	* Always set lev_out_min to fix uninitialized error (identified by valgrind) that caused errorneous behavior in mss_val extrapolation in nco_vrt_ntp() with some compilers (compy, cori defaults)

	* Change ps_sz from double to size_t

	* Fix nco_rgr.c CEWI's and outfit for bug-hunting why _FillValue not requested or created

2019-12-18  Charlie Zender  <zender@uci.edu>

	* Print WARNING when nco_vrt_ntp() fails to create _FillValue attribute

	* Document --glb_avg

	* Implement and document ncpdq flt_dbl map

2019-12-17  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.1-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.1-alpha03: Ignite';git push
	git tag -a 4.9.1-alpha03 -m 'automake libnco.la;ncclimo glb_avg';git push --tags

	* Correct automake syntax from -lnco to -l../nco/libnco.la (per bug #118 from Daniel Macks)

	* ncclimo global average timeseries working prototype with --glb_avg

2019-12-16  Charlie Zender  <zender@uci.edu>

	* Add stubs for ncclimo global average timeseries

	* Tweak _NCProperties message

2019-12-12  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.1-alpha02 release procedure: