@@ -1,3 +1,9 @@
+2020-01-14  Charlie Zender  <zender@sastrugi>
+
+	* nco_chk_map() report computed not disk values, thus preventing frac_a min/max values for both frac_a and frac_b values when frac_b variable not present on disk
+
+	* Tidy nco_rgr.c, nco_map.c while hunting chk_map errors
+
 2020-01-09  Charlie Zender  <zender@sastrugi>
 
 	* Adjust area reported to calling code by small-circle area correction
